# Galeforce-smash

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust_build.yml
custom-var/: Cargo.toml
custom-var/src/: lib.rs
galeforce_utils/: cargo.toml
galeforce_utils/src/: lib.rs  table_const.rs  utils.rs  vars.rs
src/: custom_vars.rs  ecb_shifts.rs  edge_cancels.rs  func_hooks.rs  lib.rs  utils.rs  var.rs
src/fighter/: mod.rs
src/fighter/bayonetta/: acmd.rs  mod.rs  opff.rs
src/fighter/brave/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/buddy/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/captain/: acmd.rs  effects.rs  mod.rs  opff.rs  specials.rs
src/fighter/chrom/: mod.rs
src/fighter/cloud/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/common/: common_status.rs  controls.rs  ecb_shifts.rs  edge_cancels.rs  galeforce.rs  mod.rs  opff.rs
src/fighter/daisy/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/dedede/: acmd.rs  mod.rs  opff.rs
src/fighter/demon/: acmd.rs  agent_init.rs  mod.rs  opff.rs
src/fighter/diddy/: acmd.rs  mod.rs  opff.rs
src/fighter/dolly/: acmd.rs  mod.rs  opff.rs  specials.rs  weapon.rs
src/fighter/donkey/: acmd.rs  effects.rs  mod.rs  opff.rs  specials.rs  status.rs
src/fighter/duckhunt/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/edge/: acmd.rs  mod.rs  opff.rs
src/fighter/eflame/: acmd.rs  mod.rs  opff.rs
src/fighter/elight/: acmd.rs  mod.rs  opff.rs
src/fighter/falco/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/fox/: acmd.rs  mod.rs  opff.rs  specials.rs  weapon.rs
src/fighter/gamewatch/: mod.rs  opff.rs  status.rs
src/fighter/ganon/: acmd.rs  effects.rs  mod.rs  opff.rs  specials.rs
src/fighter/gaogaen/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/gekkouga/: acmd.rs  mod.rs  opff.rs  specials.rs  weapon.rs
src/fighter/ike/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/inkling/: acmd.rs  mod.rs  opff.rs  weapon.rs
src/fighter/jack/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/kamui/: acmd.rs  mod.rs  opff.rs  specials.rs  weapon.rs
src/fighter/ken/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/kirby/: acmd.rs  effects.rs  mod.rs  opff.rs  specials.rs
src/fighter/koopa/: acmd.rs  effects.rs  mod.rs  opff.rs  specials.rs
src/fighter/koopajr/: acmd.rs  mod.rs  opff.rs
src/fighter/krool/: acmd.rs  effects.rs  mod.rs  opff.rs  specials.rs
src/fighter/link/: acmd.rs  mod.rs  opff.rs  specials.rs  weapon.rs
src/fighter/littlemac/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/lucario/: acmd.rs  mod.rs  opff.rs  sounds.rs  specials.rs  weapon.rs
src/fighter/lucas/: acmd.rs  mod.rs  opff.rs
src/fighter/lucina/: acmd.rs  effect.rs  mod.rs  opff.rs  sound.rs  special.rs
src/fighter/luigi/: acmd.rs  effects.rs  mod.rs  opff.rs  specials.rs  status.rs  weapons.rs
src/fighter/mario/: acmd.rs  effects.rs  mod.rs  opff.rs  specials.rs
src/fighter/mariod/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/marth/: acmd.rs  effects.rs  mod.rs  opff.rs  specials.rs
src/fighter/master/: acmd.rs  effects.rs  mod.rs  opff.rs  specials.rs
src/fighter/metaknight/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/mewtwo/: acmd.rs  mod.rs  opff.rs
src/fighter/miifighter/: acmd.rs  mod.rs  opff.rs  specials.rs
src/fighter/miigunner/: acmd.rs  mod.rs  opff.rs  specials.rs  weapons.rs
src/fighter/miiswordman/: acmd.rs  effects.rs  mod.rs  opff.rs
src/fighter/murabito/: acmd.rs  mod.rs  opff.rs
src/fighter/nana/: mod.rs  opff.rs
src/fighter/ness/: acmd.rs  mod.rs  opff.rs  specials.rs  weapon.rs
src/fighter/packun/: acmd.rs  mod.rs  opff.rs  (+1 more)
src/fighters/: mod.rs
(+741 files in other folders)
