[package]
name = "galeforce"
version = "0.11.36"
authors = ["Dyad/"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"
plugin-dependencies = [
    { name = "libnro_hook.nro", url = "https://github.com/ultimate-research/nro-hook-plugin/releases/download/master/libnro_hook.nro" },
    { name = "libsmashline_plugin.nro", url = "https://github.com/HDR-Development/smashline/releases/download/v1.2.3/libsmashline_plugin.nro" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }

skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script", branch = "development" }
smashline = { git = "https://github.com/HDR-Development/smashline"}
smash_rs = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }

custom_var = { path = "./custom-var" }
galeforce_utils = { path = "./galeforce_utils"}

[patch.crates-io]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
opt-level = 'z'
panic = "abort"
lto = false
codegen-units = 1