[package]
name = "galeforce"
version = "0.11.36"
authors = ["Dyad/"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.1"

skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script", branch = "development" }
smashline = { git = "https://github.com/HDR-Development/smashline"}
smash_rs = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }

custom_var = { path = "./custom-var" }
galeforce_utils = { path = "./galeforce_utils"}

[patch.crates-io]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1