[package]
name = "custom_var"
version = "0.0.1"
edition = "2018"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
#skyline_smash = { git = "https://github.com/Dyad2/skyline-smash", features = ["weak_l2cvalue"] }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
lazy_static = "1.4.0"
parking_lot = "0.11.2"